# api/swagger.yaml
@@ -1,4 +1,3 @@
----
 swagger: "2.0"
 info:
   description: "API for handling the configuration parameters."
@@ -16,7 +15,6 @@ paths:
     get:
       description: "Returns a list of configuration parameters."
       operationId: "GetParameters"
-      parameters: []
       responses:
         200:
           description: "A list of parameters."
@@ -26,7 +24,7 @@ paths:
           description: "Unexpected Error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "configuration"
     post:
       description: "Add configuration parameter."
       operationId: "CreateParameter"
@@ -46,17 +44,13 @@ paths:
           description: "Unexpected Error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "configuration"
   /parameters/{parameter_id}:
     get:
       description: "Get the requested configuration parameter."
       operationId: "GetParameter"
       parameters:
-      - name: "parameter_id"
-        in: "path"
-        description: "unique identifier of parameter"
-        required: true
-        type: "string"
+      - $ref: "#/parameters/parameter_id"
       responses:
         200:
           description: "A parameter."
@@ -68,16 +62,12 @@ paths:
           description: "Unexpected Error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "configuration"
     put:
       description: "Updates the requested configuration parameter."
       operationId: "UpdateParameter"
       parameters:
-      - name: "parameter_id"
-        in: "path"
-        description: "unique identifier of parameter"
-        required: true
-        type: "string"
+      - $ref: "#/parameters/parameter_id"
       - in: "body"
         name: "body"
         description: "parameter"
@@ -95,16 +85,12 @@ paths:
           description: "Unexpected Error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "configuration"
     delete:
       description: "Deletes the requested configuration parameter."
       operationId: "DeleteParameter"
       parameters:
-      - name: "parameter_id"
-        in: "path"
-        description: "unique identifier of parameter"
-        required: true
-        type: "string"
+      - $ref: "#/parameters/parameter_id"
       responses:
         200:
           description: "Deleted"
@@ -114,7 +100,7 @@ paths:
           description: "Unexpected Error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "configuration"
 definitions:
   Error:
     type: "object"
